<resources>
    <string name="app_name">CoinMarketCap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crypto">Cryptoassets</string>
    <string name="fiat">Fiat</string>
    <string name="stories">Stories</string>
    <string name="links">For more information links are given below:</string>
    <string name="refer_to_this_website">Refer to this website:</string>
    <string name="message_board">Message Board:</string>
</resources>