<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cryptoInfo.CryptoInfo">

        <ImageView
            android:id="@+id/crypto_info_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/crypto_info_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:text="Bitcoin"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/crypto_info_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/crypto_info_back" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crypto_info_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/crypto_info_back">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/crypto_info_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/crypto_info_logo"
                    app:layout_constraintStart_toEndOf="@id/crypto_info_logo"
                    app:layout_constraintTop_toTopOf="@id/crypto_info_logo">

                    <TextView
                        android:id="@+id/crypto_info_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/adamina"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/crypto_info_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/adamina"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/crypto_info_name"
                        app:layout_constraintStart_toEndOf="@id/crypto_info_name"
                        app:layout_constraintTop_toTopOf="@id/crypto_info_name" />

                    <TextView
                        android:id="@+id/crypto_info_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/adamina"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@id/crypto_info_name"
                        app:layout_constraintTop_toBottomOf="@id/crypto_info_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/crypto_info_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/crypto_info_logo" />

                <TextView
                    android:id="@+id/crypto_info_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/crypto_info_recycler" />

                <TextView
                    android:id="@+id/crypto_info_links"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/amiko"
                    android:text="@string/links"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/crypto_info_desc"
                    app:layout_constraintTop_toBottomOf="@id/crypto_info_desc" />

                <TextView
                    android:id="@+id/crypto_info_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amiko"
                    android:text="@string/refer_to_this_website"
                    android:textColor="@color/greenish_blue"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/crypto_info_links"
                    app:layout_constraintTop_toBottomOf="@id/crypto_info_links" />

                <TextView
                    android:id="@+id/crypto_info_web_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/amiko"
                    android:textColor="@color/blue"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="@id/crypto_info_web"
                    app:layout_constraintStart_toEndOf="@id/crypto_info_web"
                    app:layout_constraintTop_toTopOf="@id/crypto_info_web"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/crypto_info_mess_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/amiko"
                    android:text="@string/message_board"
                    android:textColor="@color/greenish_blue"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/crypto_info_web"
                    app:layout_constraintTop_toBottomOf="@id/crypto_info_web" />

                <TextView
                    android:id="@+id/crypto_info_mess_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/amiko"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/blue"
                    app:layout_constraintBottom_toBottomOf="@id/crypto_info_mess_board"
                    app:layout_constraintStart_toEndOf="@id/crypto_info_mess_board"
                    app:layout_constraintTop_toTopOf="@id/crypto_info_mess_board" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/crypto_info_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>